Clean up repository - keep only essential project files
- Removed 40+ temporary status/report files
- Removed zip files from lambda folders
- Kept only core project files:
  * Frontend code (HTML, CSS, JS)
  * Lambda functions (all phases)
  * CloudFormation templates
  * Documentation
  * Utility scripts
- Added new getEventRegistrations Lambda for View Registrants feature
- Updated frontend with all bug fixes

--- a/cloudformation/api-lambda.yaml
+++ b/cloudformation/api-lambda.yaml
@@ -198,6 +198,33 @@ Resources:
       ParentId: !GetAtt ApiGateway.RootResourceId
       PathPart: registrations
 
+  # OPTIONS /events (CORS)
+  EventsOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref ApiGateway
+      ResourceId: !Ref EventsResource
+      HttpMethod: OPTIONS
+      AuthorizationType: NONE
+      Integration:
+        Type: MOCK
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,POST,OPTIONS'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            ResponseTemplates:
+              application/json: ''
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+            method.response.header.Access-Control-Allow-Origin: true
+
   # POST /events
   CreateEventMethod:
     Type: AWS::ApiGateway::Method
@@ -237,6 +264,33 @@ Resources:
         Type: AWS_PROXY
         IntegrationHttpMethod: POST
         Uri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetEventFunction.Arn}/invocations'
+
+  # OPTIONS /registrations (CORS)
+  RegistrationsOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref ApiGateway
+      ResourceId: !Ref RegistrationsResource
+      HttpMethod: OPTIONS
+      AuthorizationType: NONE
+      Integration:
+        Type: MOCK
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            ResponseTemplates:
+              application/json: ''
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+            method.response.header.Access-Control-Allow-Origin: true
 
   # POST /registrations
   CreateRegistrationMethod:
@@ -289,9 +343,11 @@ Resources:
   ApiDeployment:
     Type: AWS::ApiGateway::Deployment
     DependsOn:
+      - EventsOptionsMethod
       - CreateEventMethod
       - ListEventsMethod
       - GetEventMethod
+      - RegistrationsOptionsMethod
       - CreateRegistrationMethod
     Properties:
       RestApiId: !Ref ApiGateway
