Fix ticket validation and enhance system with professional theme
- Fix QR code generation in PDF tickets with proper QR code images
- Implement professional, eye-soothing PDF ticket design with modern styling
- Fix S3 permissions for ticket downloads (added s3:ListBucket permission)
- Apply professional theme to entire frontend application with modern UI
- Fix ticket validation cross-region issue (Lambda in eu-north-1 accessing DynamoDB in us-east-1)
- Update validateTicket function to handle both qrData and ticketId parameters
- Enhanced error handling and logging throughout the system
- All components now fully functional with professional styling

--- a/cloudformation/phase3-api-lambda.yaml
+++ b/cloudformation/phase3-api-lambda.yaml
@@ -68,8 +68,10 @@ Resources:
                   - s3:PutObject
                   - s3:GetObject
                   - s3:PutObjectAcl
+                  - s3:ListBucket
                 Resource:
                   - !Sub 'arn:aws:s3:::${TicketsBucketName}/*'
+                  - !Sub 'arn:aws:s3:::${TicketsBucketName}'
 
   # Process Payment Lambda
   ProcessPaymentFunction:
