--- a/lambda-phase3/generateTicket/package.json
+++ b/lambda-phase3/generateTicket/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-s3": "^3.0.0"
+    "@aws-sdk/client-s3": "^3.0.0",
+    "qrcode": "^1.5.3",
+    "pdfkit": "^0.13.0"
   }
 }
